--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,5 @@ log4j.rootLogger=DEBUG, file, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p  %c{1}:%L - %m%n
+# TODO: Why is it not possible in groovy to use the %L line modifier without compile static?
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
