--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,6 @@ jobs:
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: build
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: test
