--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,6 @@ jobs:
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: test
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: spotlessCheck
