--- a/sample-game/build.gradle
+++ b/sample-game/build.gradle
@@ -14,11 +14,16 @@ repositories {
 dependencies {
     compile "org.codehaus.groovy:groovy-all:3.0.2"
     compile 'log4j:log4j:1.2.17'
+    compile project(":core")
 
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
     testCompile "org.spockframework:spock-core"
 }
 
+task runGame (dependsOn: 'classes', type: JavaExec) {
+    main = 'EntryPoint'
+    classpath = sourceSets.main.runtimeClasspath
+}
 test {
     useJUnitPlatform()
 }
