--- a/build.gradle
+++ b/build.gradle
@@ -2,25 +2,22 @@ plugins {
 	id "com.diffplug.gradle.spotless" version "4.5.1"
 }
 
-apply plugin: 'groovy'
+allprojects {
+	apply plugin: 'groovy'
 
-version = "0.0.1"
+	version = "0.0.1"
+}
+
+subprojects {
+	repositories {
+		mavenCentral()
+		maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+	}
+}
 
 repositories {
 	mavenCentral()
 	maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-}
-
-dependencies {
-	compile "org.codehaus.groovy:groovy-all:3.0.2"
-	compile 'log4j:log4j:1.2.17'
-
-	testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
-	testCompile "org.spockframework:spock-core"
-}
-
-test {
-	useJUnitPlatform()
 }
 
 spotless {
@@ -39,4 +36,8 @@ spotless {
 		target '*.gradle' // default target of groovyGradle
 		greclipse()
 	}
+}
+
+test {
+	useJUnitPlatform()
 }
