--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,3 +9,7 @@ dependencies {
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
     testCompile "org.spockframework:spock-core"
 }
+
+test {
+    useJUnitPlatform()
+}
