--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ version = "0.0.1"
 dependencies {
     compile "org.codehaus.groovy:groovy-all:3.0.2"
     compile 'log4j:log4j:1.2.17'
+    compile group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.4'
 
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
 
