fix running tests for headless environment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         java-version: 11
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: build
+        arguments: build -Dgg.headless=true
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test
+        arguments: test -Dgg.headless=true
