--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,11 +15,8 @@ dependencies {
 }
 
 test {
-    // Required for running tests on a build server that normally require physical input devices as keyboards.
-    def runHeadless = System.getProperty('gg.headless')
-    if(runHeadless == 'true') {
-        systemProperties 'java.awt.headless': "true"
-    }
+    // Required for running tests on a build server that require physical input devices as keyboards.
+    systemProperties 'java.awt.headless': "false"
 
     useJUnitPlatform()
 }
