--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,11 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: build
-    - uses: eskatos/gradle-command-action@v1
+#    - uses: actions/setup-java@v1
+#      with:
+#        java-version: 11
+    - uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-11
+#      with:
+#        arguments: build
       with:
         arguments: test
