--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 test {
     // Required for running tests on a build server that require physical input devices as keyboards.
-    systemProperties 'java.awt.headless': "false"
+//    systemProperties 'java.awt.headless': "false"
 
     useJUnitPlatform()
 }
