--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-11
-      with:
-        args: build --stacktrace
+    - name: Setup JDK 11
+      uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.7' # The JDK version to make available on the path.
+    - name: Execute Gradle build
+      run: gradle build
+
