--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,13 +19,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Check out current branch
-      uses: actions/checkout@v2
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Setup JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11.0.7' # The JDK version to make available on the path.
-    - name: Execute Gradle build
-      run: ./gradlew build
+      - name: Install sdk man
+        run: curl -s https://get.sdkman.io | bash
+      - name: Install java 11
+        run: sdk install 11.0.7-open
+      - name: Check java version
+        run: echo java --version
+#    - name: Check out current branch
+#      uses: actions/checkout@v2
+#    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#    - name: Setup JDK 11
+#      uses: actions/setup-java@v1
+#      with:
+#        java-version: '11.0.7' # The JDK version to make available on the path.
+#    - name: Execute Gradle build
+#      run: ./gradlew build
 
