--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install sdk man
         run: curl -s https://get.sdkman.io | bash && source "/home/runner/.sdkman/bin/sdkman-init.sh"
       - name: Install java 11
-        run: sdk install 11.0.7-open
+        run: source "/home/runner/.sdkman/bin/sdkman-init.sh" && echo sdk --version && sdk install 11.0.7-open
       - name: Check java version
         run: echo java --version
 #    - name: Check out current branch
