--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,17 +19,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install sdk man
-        run: curl -s https://get.sdkman.io | bash
-      - name: Install java 11
-        run: source "/home/runner/.sdkman/bin/sdkman-init.sh" && sdk install java 11.0.7-open
-      - name: Check java version
-        run: echo $(java --version)
-
       - name: Check out current branch
         uses: actions/checkout@v2
+        
+      - name: Install sdk man
+        run: curl -s https://get.sdkman.io | bash
       - name: Run gradle build
-        run: ./gradlew build
+        run: source "/home/runner/.sdkman/bin/sdkman-init.sh" && sdk install java 11.0.7-open && echo $(java --version) && ./gradlew build
+
+#      - name: Run gradle build
+#        run: ./gradlew build
 #    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 #    - name: Setup JDK 11
 #      uses: actions/setup-java@v1
