--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,8 @@ version = "0.0.1"
 dependencies {
     compile "org.codehaus.groovy:groovy-all:3.0.2"
     compile 'log4j:log4j:1.2.17'
+    compile group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.4'
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
 
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
 
@@ -13,5 +15,8 @@ dependencies {
 }
 
 test {
+    // Required for running tests on a build server that require physical input devices as keyboards.
+    systemProperties 'java.awt.headless': "false"
+
     useJUnitPlatform()
 }
