--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,8 +5,10 @@ version = "0.0.1"
 dependencies {
     compile "org.codehaus.groovy:groovy-all:3.0.2"
     compile 'log4j:log4j:1.2.17'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.4'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
 
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
 
