implement simple dependency resolution and lifecycle mangement

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'transform'
 include 'core'
 include 'demo-render-clock'
 include 'demo-input-bindings'
+include 'demo-configuration-live-update'
