--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'core'
 include 'demo-render-clock'
 include 'demo-input-bindings'
 include 'demo-configuration-live-update'
+include 'demo-shape-collisions'
