movable player boilerplate

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'demo-render-clock'
 include 'demo-input-bindings'
 include 'demo-configuration-live-update'
 include 'demo-shape-collisions'
+include 'game-shooter'
