--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'groovy-games'
 include 'transform'
 include 'core'
+include 'core-kotlin'
 include 'demo-render-clock'
 include 'demo-input-bindings'
 include 'demo-configuration-live-update'
