--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,8 +8,9 @@ dependencies {
     compile "org.codehaus.groovy:groovy-all:3.0.2"
     compile 'log4j:log4j:1.2.17'
     compile group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.4'
-    compile group: 'com.google.guava', name: 'guava', version: '23.0'
+    compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
     compile 'ch.obermuhlner:big-math:2.3.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
     testImplementation('org.spockframework:spock-core:2.0-M2-groovy-3.0')
 
