create readme + fix projects for runGame task

--- a/demo-input-bindings/build.gradle
+++ b/demo-input-bindings/build.gradle
@@ -15,6 +15,6 @@ dependencies {
 }
 
 task runGame (dependsOn: 'classes', type: JavaExec) {
-    main = 'EntryPoint'
+    main = 'InputBindingsDemo'
     classpath = sourceSets.main.runtimeClasspath
 }
