--- a/demo-render-clock/build.gradle
+++ b/demo-render-clock/build.gradle
@@ -13,6 +13,6 @@ dependencies {
 }
 
 task runGame (dependsOn: 'classes', type: JavaExec) {
-    main = 'EntryPoint'
+    main = 'ClockRenderDemo'
     classpath = sourceSets.main.runtimeClasspath
 }
